--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: mvp_phoniron
-description: "A new Flutter project."
+description: "phoniron project."
 publish_to: 'none'
 version: 0.1.0
 
@@ -7,16 +7,42 @@ environment:
   sdk: '>=3.3.4 <4.0.0'
 
 dependencies:
-  flex_color_scheme: ^7.3.1
   flutter:
     sdk: flutter
-  flutter_svg: ^2.0.10+1
+  flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.4.0
   google_fonts: ^6.2.1
+  rename_app: ^1.3.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: false
+  image_path: "assets/icons/icon.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: false
+    image_path: "path/to/image.png"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
+  windows:
+    generate: false
+    image_path: "path/to/image.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: false
+    image_path: "path/to/image.png"
+
+flutter_native_splash:
+  color: "#006973"
+  image: assets/logos/logo_white.png
+  android_12:
+    color: "#006973"
+    image: assets/logos/logo_white.png
 
 flutter:
   uses-material-design: true
@@ -25,4 +51,3 @@ flutter:
     - assets/backgrounds/
     - assets/icons/
     - assets/logos/
-    - assets/vectors/
