--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.3.4 <4.0.0'
 
 dependencies:
+  flex_color_scheme: ^7.3.1
   flutter:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
