--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   flex_color_scheme: ^7.3.1
   flutter:
     sdk: flutter
+  flutter_easy_faq: ^1.0.1
+  flutter_faq: ^1.0.1+1
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.4.0
   google_fonts: ^6.2.1
