--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: false
-  image_path: "assets/icons/icon.png"
+  image_path: "assets/app_icons/icon.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
   web:
     generate: false
@@ -52,5 +52,6 @@ flutter:
   assets:
     - assets/
     - assets/backgrounds/
-    - assets/icons/
+    - assets/app_elements/
+    - assets/app_icons/
     - assets/logos/
