--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.3.4 <4.0.0'
 
 dependencies:
+  expansion_tile_card: ^3.0.0
   flex_color_scheme: ^7.3.1
   flutter:
     sdk: flutter
@@ -15,6 +16,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.4.0
   google_fonts: ^6.2.1
+  material_design_icons_flutter: ^7.0.7296
   rename_app: ^1.3.2
 
 dev_dependencies:
