--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_native_splash: ^2.4.0
   google_fonts: ^6.2.1
   material_design_icons_flutter: ^7.0.7296
+  phosphor_flutter: ^2.1.0
   rename_app: ^1.3.2
 
 dev_dependencies:
