--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,18 +7,19 @@ environment:
   sdk: '>=3.3.4 <4.0.0'
 
 dependencies:
+  dependency_validator: ^4.0.0
   expansion_tile_card: ^3.0.0
   flex_color_scheme: ^7.3.1
   flutter:
     sdk: flutter
   flutter_easy_faq: ^1.0.1
-  flutter_faq: ^1.0.1+1
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.4.0
   google_fonts: ^6.2.1
   material_design_icons_flutter: ^7.0.7296
   phosphor_flutter: ^2.1.0
   rename_app: ^1.3.2
+  sync_scroll_library: ^1.1.0
 
 dev_dependencies:
   flutter_test:
