--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   badges: ^3.1.2
   dependency_validator: ^4.0.0
+  dynamic_sizedbox: ^0.0.5
   flex_color_scheme: ^7.3.1
   flutter:
     sdk: flutter
